<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/app_bar_setting"
        android:icon="@drawable/setting_24"
        android:title="@string/setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_bar_about"
        android:icon="@drawable/ic_splash"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>